Fix index page on small phones, writing page again

--- a/theme.css
+++ b/theme.css
@@ -152,7 +152,7 @@ h1, .h1 {
 
 @media (max-width: 992px){
   .bottom-text {
-    font-size: 2.3em;
+    font-size: 2.05em;
     margin-bottom: 2.5rem;
   }
 }
@@ -337,7 +337,7 @@ h1, .h1 {
 
 .card-img-writings {
   height:100px!important;
-  min-width: 100%;
+  min-width: 4.5vh;
   width: 100%;
   object-fit: cover;
 }
